--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
 </head>
 <body>
     <div id="app">跨域学习</div>
-    <div id="showData"></div>
+    <h1>users增删改查测试</h1>
+    <button id="add">新增</button>
+    <button id="revise">修改</button>
+    <button id="delete">删除</button>
+    <button id="find">查找</button>
     <!-- <img src="./src/static/image/audio.png" alt="" /> -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <!-- jsonp跨域 -->
-    <script src="./src/jsonp/index.js"></script>
+    <!-- <script src="./src/jsonp/index.js"></script> -->
     <!-- cors跨域 -->
-    <script src="./src/cors/index.js"></script>  
+    <!-- <script src="./src/cors/index.js"></script>   -->
     <!-- node代理跨域 -->
-    <script src="./src/proxy/index.js"></script> 
+    <!-- <script src="./src/proxy/index.js"></script>  -->
+
+   <script src="./src/userPage/index.js"></script>
 </body>
 </html>
